--- a/style.css
+++ b/style.css
@@ -1,72 +1,61 @@
-*{
+ * {
     margin:0;
     padding:0;
 }
-/*body{
-    background-image:url(panionios.jpg);
-    color:white;
-}*/
-ul li:nth-child(3){
-    color:red;
+.container {
+    max-width:1100px;
+    margin-left:auto;
+    margin-right:auto;
 }
-nav{
-    margin-left: 50px;
-    margin-top:50px;
+body{
+    background-color:silver;
 }
-nav ul {
-    list-style:none;
+header {
+    height: 100px;
+    background-color: blue;
 }
-
-    
-nav ul li{
-    background-color:aqua;
-    width:80px;
-    height:40px;
+nav {
+    height:50px;
+    background-color: green;
+}
+main {
+    height:400px;
+    background-color: brown;
+}
+footer{
+    height:100px;
+    background-color:tomato;
+}
+section {
+    background-color: pink;
+    height: 400px; 
+    width: 40%;
+    float:left; 
+}
+aside {
+    background-color: purple;
+    height: 400px;
+    width: 30%;
     float:left;
 }
-
-nav ul li a{
-    height:40px;
-    width:80px;
-    text-decoration: none;
-    color:#000;
-    display:block;
+.yolo{
+    background-color: black;
+    width:30%;
+    height: 400px;
+    float: left;
+}
+section p {
+    color: blue;
+}
+aside p {
+    background-color: yellow;
+    margin-top:50px;
+    margin-left: 20px;
+    margin-right: 50px;
+    padding:10px; 
+    border-top:2px white solid;
+    border-bottom:5px green dotted;
+}
+.lola{
     background-color: pink;
-    text-align: center;
-    line-height: 40px;
-    
-    
-}
-
-nav ul li a:hover{
-    background-color: aqua;
-    text-decoration: underline;
-    transition:background-color 2s, height 2s,width 2s;
-    height:65px;
-    width:60px;
-}
-nav ul ul {
-    visibility: hidden;
-}
-
-nav ul li:hover ul{
-    visibility:visible;
-}
-
-nav ul ul ul{
-    position:relative;
-    left:80px;
-    top:-40px;
-}
-
-nav ul li:hover ul ul{
-    visibility:hidden;
-}
-    
-nav ul ul li:hover ul{
-    visibility:visible;
-}
-.current{
-    background-color: aqua;
-    text-decoration: underline;
 }
